--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
 .App {
-  text-align: center;
-}
+  width: 100vw;
+  height: 100vh;
+  background-color: grey;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.background {
+  width: 383px;
+  box-sizing: border-box;
+
+  background: #FAFAFA;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+  width: 100%;
+  padding: 12px;
+  box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table {
+  width: 100%;
+  height: 100%;
+  padding: 0 10px 10px 10px;
+  box-sizing: border-box;
+
+  display: grid;
+  grid-template-columns: 1.5fr 1fr 1fr 1fr 1fr;
+}
+
+.cell {
+  height: 32px;
+  display: flex;
+  align-items: center;
+
+  border-bottom: 1px solid rgba(30, 30, 30, 0.08);
+}
+
+.icon {
+  width: 22px;
+  height: 22px;
+  margin: 0 4px 0 8px;
+}
+
+.text {
+  font-family: 'Plus Jakarta Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
 }
