--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,9 @@
 
 .cell {
   height: 32px;
+  padding: 2px 0 2px 0;
   display: flex;
   align-items: center;
-
-  border-bottom: 1px solid rgba(30, 30, 30, 0.08);
 }
 
 .icon {
@@ -52,4 +51,12 @@
   font-weight: 600;
   font-size: 12px;
   line-height: 15px;
+}
+
+.divider {
+  width: 100%;
+  height: 0;
+  border-bottom: 1px solid rgba(30, 30, 30, 0.08);
+
+  grid-column: 1 / -1;
 }
